flux-cel/verify-git-repositories/.chainsaw-test-rename-after-issue-10313-fix/good-gitrepositories.yaml
apiVersion: source.toolkit.fluxcd.io/v1
kind: GitRepository
metadata:
  name: good-gitrepo-01
spec:
  interval: 5m0s
  url: https://github.com/fluxcd/foo
---
apiVersion: source.toolkit.fluxcd.io/v1
kind: GitRepository
metadata:
  name: good-gitrepo-02
spec:
  interval: 5m0s
  url: ssh://git@github.com:fluxcd/bar
