flux-cel/verify-git-repositories/verify-git-repositories.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-git-repositories
  annotations:
    policies.kyverno.io/title: Verify Git Repositories in CEL expressions
    policies.kyverno.io/category: Flux in CEL 
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/subject: GitRepository
    policies.kyverno.io/description: >-
      Ensures that Git repositories used for Flux deployments
      in a cluster originate from a specific, trusted organization.
      Prevents the use of untrusted or potentially risky Git repositories.
      Protects the integrity and security of Flux deployments.
spec:  
  validationFailureAction: Audit
  rules:
    - name: github-repositories-only
      match:
        any:
        - resources:
            kinds:
              - GitRepository
      exclude:
        any:
        - resources:
            namespaces:
              - flux-system
      validate:
        cel:
          expressions:
            - expression: "object.spec.url.startsWith('https://github.com/fluxcd/') || object.spec.url.startsWith('ssh://git@github.com:fluxcd/')"
              message: .spec.url must be from a repository within the organisation X
